css: alternative fix for paragraph-in-list spacing
Removing the override helps on lists that contain mostly paragraphs, but it's not an improvement for lists that contain mostly single lines of text.
This is an alternate solution that's closer to how github's css works: paragraphs inside lists are specifically given top margin, and all list items get a quarter em of minimum top margin.

--- a/source/extra.css
+++ b/source/extra.css
@@ -12,9 +12,10 @@ td, th {
    padding: 0.4rem 0.8rem 0.4rem 0;
 }
 
-ol ol,
-ol ul,
-ul ol,
-ul ul {
-  margin-bottom: 1rem;
+ol li, ul li {
+   margin-top: 0.25rem;
+}
+
+li > p {
+   margin-top: 1rem;
 }
